<resources>
    <string name="app_name">jannatAragh</string>
    <string name="عرقیات">عرقیات جنت</string>
    <string name="header_toolbar">عرقیات جنّت</string>
    <string name="header_drawer"> عرقایات گیاهی جنّت</string>
    <string name="titleNews">اخبار برگزیده سیاسی</string>
    <string name="descNews">در یکی از جلسات در مورد 5 بعلاوه 1 اعلام شد که امریکا خلاف قوانین خود عمل کرده است</string>
    <string name="price">8,000</string>
    <string name="toman">تومان</string>
    <string name="porgorosh_list">لیست کامل</string>
    <string name="porforosh">پرفروش ترین ها</string>
    <string name="commentHead">عنوان کامنت</string>
    <string name="commentDesc">متن نظر کاربران در این قسمت قرار میگیرد.</string>
    <string name="title_properties">عنوان محصول</string>
    <string name="txt_properties_explain">خلاصه ای از خصوصیات محصول را می توانید در این قسمت وارد کنید.</string>
    <string name="properties_doctor_desc" >
        عرق نعناع ضد نفخ است و می‌تواند باعث کاهش درد معده شود و برای بادشکن هم می‌تواند به خوبی استفاده شود و برای بعضی از دل‌دردها، دل‌پیچه‌ها، رفع سوء‌هاضمه و اینگونه بیماری‌ها فرآورده خوبی است. این گیاه برای كمك به هضم معده بسیار مفید است و افرادی که مشکل گوارشی دارند، می‌توانند از عرق نعناع استفاده کنند. نعناع تازه چون دارای اسانس بیشتر است مسلما خواص درمانی بیشتری هم دارد ولی حرارت دادن باعث کم شدن خاصیت آن می‌شود. از برگ‌های این گیاه برای خوشبو کردن ماست و دوغ نیز استفاده می‌شود كه مفید است. دم‌‌کرده عرق نعناع هم برای تقویت معده و روده کاربرد دارد.
        عرق نعناع ضد نفخ است و می‌تواند باعث کاهش درد معده شود و برای بادشکن هم می‌تواند به خوبی استفاده شود و برای بعضی از دل‌دردها، دل‌پیچه‌ها، رفع سوء‌هاضمه و اینگونه بیماری‌ها فرآورده خوبی است. این گیاه برای كمك به هضم معده بسیار مفید است و افرادی که مشکل گوارشی دارند، می‌توانند از عرق نعناع استفاده کنند. نعناع تازه چون دارای اسانس بیشتر است مسلما خواص درمانی بیشتری هم دارد ولی حرارت دادن باعث کم شدن خاصیت آن می‌شود. از برگ‌های این گیاه برای خوشبو کردن ماست و دوغ نیز استفاده می‌شود كه مفید است. دم‌‌کرده عرق نعناع هم برای تقویت معده و روده کاربرد دارد.
    </string>
    <string name="title_properties_doctor">خواص درمانی</string>
    <string name="product_name_basket">نام محصول</string>
    <string name="product_count_basket" >تعداد</string>
    <string name="txt_discount_basket">تخفیف</string>
    <string name="txt_product_remove_basket">حذف</string>
    <string name="final_buy">خرید خود را نهایی کنید</string>
    <string name="menu_aboutUs">درباره ما</string>
    <string name="menu_setting">تنظیمات</string>
    <string name="menu_basket">سبد خرید</string>
    <string name="menu_home">خانه</string>
    <string name="txt_title_best_seller">پرفروش ترین ها</string>
    <string name="txt_title_best_property">پرخاصیت ترین ها</string>
    <string name="txt_best_property_list">لیست کامل</string>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


</resources>
