<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative">

    <android.support.v7.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="true"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layoutDirection="rtl"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <ImageView
                android:id="@+id/img_recycler_news"
                android:src="@drawable/aragh"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:layout_alignParentStart="true"/>

            <TextView
                android:textColor="#2f2f2f"
                android:maxLines="1"
                android:textSize="18sp"
                android:id="@+id/txt_recycler_titleNews"
                tools:text="@string/titleNews"
                android:layout_toEndOf="@id/img_recycler_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_toEndOf="@id/img_recycler_news"
                android:layout_below="@+id/txt_recycler_titleNews"
                android:layout_marginTop="16dp"

                tools:text="@string/descNews"
                android:id="@+id/txt_recycler_descNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#4CAF50"
                android:textSize="14sp"
                android:id="@+id/txt_recycler_price"
                tools:text="@string/price"
                android:layout_toEndOf="@id/img_recycler_news"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

            <TextView
                android:textColor="#4CAF50"
                android:textSize="14sp"
                android:id="@+id/txt_recycler_toman"
                tools:text="@string/toman"
                android:layout_toEndOf="@id/txt_recycler_price"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:id="@+id/cardView_basket"
                android:src="@drawable/ic_shopping_basket_black_24dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="0dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>