<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackground">

            <RelativeLayout
                android:layout_width="160dp"
                android:layout_height="185dp"
                android:layoutDirection="rtl">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layoutDirection="rtl"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_recycler_news"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="8dp"
                        android:src="@drawable/aragh" />


                    <TextView
                        android:id="@+id/txt_recycler_titleNews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_recycler_news"
                        android:maxLines="1"
                        android:textColor="#2f2f2f"
                        android:textSize="10sp"
                        tools:text="@string/titleNews" />

                    <TextView
                        android:id="@+id/txt_recycler_descNews"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_below="@+id/txt_recycler_titleNews"
                        android:layout_marginTop="4dp"
                        android:textSize="10dp"
                        tools:text="@string/descNews" />



                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:background="#D3D2D2"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingHorizontal="8dp"
                android:layoutDirection="rtl">

                <TextView
                    android:id="@+id/txt_recycler_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/txt_recycler_toman"
                    android:textColor="#4CAF50"
                    android:textSize="12sp"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/txt_recycler_toman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_alignParentEnd="true"
                    android:textColor="#4CAF50"
                    android:textSize="12sp"
                    android:text="@string/toman" />
                <TextView
                    android:id="@+id/txt_product_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:text="id"/>

                <!--<ImageView-->
                    <!--android:id="@+id/cardView_basket"-->
                    <!--android:layout_width="25dp"-->
                    <!--android:layout_height="25dp"-->
                    <!--android:layout_margin="0dp"-->
                    <!--android:src="@drawable/ic_shopping_basket_black_24dp" />-->


            </RelativeLayout>

        </LinearLayout>




    </android.support.v7.widget.CardView>

</RelativeLayout>