<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_properties"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:id="@+id/img_properties_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/ic_favorite_black_24dp" />

                    <ImageView
                        android:id="@+id/img_properties_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@id/img_properties_fav"
                        android:src="@drawable/ic_share_black_24dp" />

                    <TextView
                        android:id="@+id/txt_properties_product_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_properties_fav"
                        android:maxLines="1"
                        tools:text="@string/title_properties"
                        android:textColor="#2f2f2f"
                        android:textSize="18sp" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_title"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:cardElevation="1dp"
                app:cardPreventCornerOverlap="true">

                <RelativeLayout
                    android:paddingVertical="2dp"
                    android:paddingHorizontal="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txt_properties_explain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:text="@string/txt_properties_explain" />

                <LinearLayout
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/txt_properties_explain"
                    android:layout_marginVertical="20dp"
                    android:background="@color/line"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_properties_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line"
                    android:layout_toRightOf="@id/txt_properties_toman"
                    tools:text="@string/price"
                    android:textColor="#4CAF50"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_alignParentLeft="true"
                    android:id="@+id/txt_properties_toman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line"
                    android:layout_marginStart="8dp"
                    tools:text="@string/toman"
                    android:textColor="#4CAF50"
                    android:textSize="20sp" />

                <info.hoang8f.widget.FButton
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/btn_properties_basket"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/txt_properties_toman"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="20dp"
                    android:drawableLeft="@drawable/ic_shopping_basket_white_24dp"
                    android:drawablePadding="0dp"
                    android:minWidth="250dp"
                    android:minHeight="80dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="-5dp"
                    android:paddingRight="20dp"
                    android:text="افزودن به سبد خرید"
                    android:textColor="@android:color/white"
                    fbutton:cornerRadius="15dp"
                    fbutton:shadowEnabled="true"
                    fbutton:shadowHeight="6dp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>